--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.NoActionBar">
+        <activity
+            android:name=".SightOnMapActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StreetViewActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDR8guEL8-Dl4TUyZcPkXuRDA4oorGlQZ0"></meta-data>
+            android:value="AIzaSyDR8guEL8-Dl4TUyZcPkXuRDA4oorGlQZ0" />
 
         <activity
             android:name=".SightInDetailActivity"
